--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WelcomeFragment">
+    tools:context=".views.fragments.WelcomeFragment">
     <com.google.android.material.card.MaterialCardView
         android:padding="30dp"
         android:layout_width="match_parent"
@@ -11,9 +11,7 @@
         android:layout_margin="8dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="18dp"
-        app:strokeColor="@color/colorPrimary"
-        app:strokeWidth="2dp">
+        android:layout_marginEnd="18dp">
 
         <LinearLayout
             android:layout_margin="10dp"
